syntax = "proto3";

package io.mmtx.protocol.protobuf;

import "abstractMessage.proto";


option java_multiple_files = true;
option java_outer_classname = "AbstractTransactionRequest";
option java_package = "io.mmtx.codec.protobuf.generated";

// PublishRequest is a publish request.
message AbstractTransactionRequestProto {
    AbstractMessageProto abstractMessage=1;
}